dhall/tests/type-inference/failure/unit/RightBiasedRecordMergeRhsNotRecord.txt
Type error: error: MustCombineRecord
 --> <current file>:1:1
  |
1 | {=} ⫽ True
  | ^^^^^^^^^^ MustCombineRecord
  |
